<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvSelectCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/select"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectCategory">

        <RadioButton
            android:id="@+id/rbRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family" />

        <RadioButton
            android:id="@+id/rbOffice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/office" />

        <RadioButton
            android:id="@+id/rbChildren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/children" />

        <RadioButton
            android:id="@+id/rbCollege"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/college" />

        <RadioButton
            android:id="@+id/rbParty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/party" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>